package org.wso2.apimgt.gateway.cli.constants;

/**
 * Constants Related to Grpc Implementation.
 */
public class GrpcConstants {
    //todo: change underscore to the hyphen
    public static final String PRODUCTION_ENDPOINTS = "x_wso2_production_endpoints";
    public static final String SANDBOX_ENDPOINTS = "x_wso2_sandbox_endpoints";
    public static final String THROTTLING_TIER = "x_wso2_throttling_tier";
    public static final String SECURITY = "x_wso2_security";
    public static final String SCOPES = "x_wso2_scopes";
    public static final String METHOD_THROTTLING_TIER = "x_wso2_method_throttling_tier";
    public static final String METHOD_SCOPES = "x_wso2_method_scopes";
    public static final String URL_SEPARATOR = "/";
}
